--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body {
 <body>
 
 <!-- Background music -->
-<audio id="birthdaySong" src="terepyarmain.mp3.mp3" loop></audio>
+<audio id="birthdaySong" src="Dekhahinahi.mp3.mp3" loop></audio>
 
 <!-- Question 1 -->
 <div id="q1" class="tab active">
